# cst2550coursework1

./: .gitignore  Book.cpp  Book.h  CMakeLists.txt  Librarian.cpp  Librarian.h  Makefile  Member.cpp  Member.h  Person.cpp  Person.h  Time.h  globals.h  main.cpp  reportcw1.docx  tests.cpp  utils.cpp  utils.h
includes/: Book.h  Date.h  Librarian.h  globals.h  utils.h
src/: Book.cpp  Librarian.cpp  Member.cpp  Person.cpp  main.cpp  tests.cpp  utils.cpp
